<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
  	  	
  	
  	<ListPreference android:key="prefSaleViewMethod" android:title="@string/saleViewMethod" android:summary="@string/title_saleView_method" android:entryValues="@array/ChooseCardYnValues" android:entries="@array/CardYnType" android:defaultValue="@string/saleView_default_Value"/>
  	<SwitchPreference android:title="@string/checkCard" android:key="checkCard" android:defaultValue="true"/>
  	<SwitchPreference android:title="@string/checkCashBack" android:key="checkCashBack" android:defaultValue="true"/>
  	<SwitchPreference android:title="@string/checkPoint" android:key="checkPoint" android:defaultValue="true"/>
  	<SwitchPreference android:title="@string/checkCash" android:key="checkCash"/>
  	<EditTextPreference android:defaultValue="10" android:key="checkCashPercent" android:title="@string/checkCashPercent" android:summary="@string/checkCashSummary"/>

</PreferenceScreen>
