<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center|center_vertical"
    android:orientation="vertical" >

    <!-- 첫번째 칸 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/list_num"
            android:textSize="14sp"  />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/item2"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/barcode"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/item3"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/item4"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/gname"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/item5"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/count"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/item6"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/total_price"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold"
            />

    </LinearLayout>




</LinearLayout>