<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/u_activity_back"
    android:orientation="vertical"
    tools:context="tipsystem.utils.KisCardPayment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/office_number"
            android:gravity="center_vertical|center"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/office_number"
            android:inputType="number"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/download_password"
            android:gravity="center_vertical|center"
            />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/download_password"
            android:ems="10"
            android:inputType="number"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/danmalki_password"
            android:gravity="center_vertical|center"
            />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/danmalki_password"
            android:ems="10"
            android:inputType="number"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/local_num"
            android:gravity="center_vertical|center"
            />

        <EditText
            android:id="@+id/editText_localnum"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/local_num"
            android:ems="10"
            android:inputType="number"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_vertical|center"
            />

        <Button
            android:onClick="info_save"
            android:id="@+id/button_save"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"
            />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pay_price1"
            android:gravity="center_vertical|center"
            />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/pay_price"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:onClick="clickCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/card_pay"
            />

        <Button
            android:onClick="clickCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cash_pay"
            />

        <Button
            android:onClick="clickPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/point_pay"
            />

    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/approval_number"
            android:gravity="center_horizontal|center"
            />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/approval_number"
            android:inputType="number"
            />

    </LinearLayout>


    <Button
        android:onClick="clickCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/approval_number"
        />


</LinearLayout>
