<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center|center_vertical"
    android:orientation="horizontal" >

    <!-- 첫번째 칸 -->
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:layout_gravity="center"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/item0"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:button="@drawable/checkbox_custom"
            android:layout_gravity="center"
            android:gravity="center" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/item1"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/sale_num"
                />

            <TextView
                android:id="@+id/item2"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/delivery_date"
                />

            <!--<TextView
                android:id="@+id/item3"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delivery_datetime"
                android:textColor="#d7d7d7"
                />-->

            <TextView
                android:id="@+id/item3"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/delivery_saleprice"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/item4"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/delivery_membernum"
                />

            <TextView
                android:id="@+id/item5"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/delivery_membername"
                />

            <TextView
                android:id="@+id/item6"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/delivery_gubun"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="right"
                android:text="포스"
/>

            <TextView
                android:id="@+id/item7"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="left"
                android:text="@string/delivery_pos_deposit"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/item8"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/delivery_address"
                android:layout_marginTop="3dip"
                android:paddingLeft="10dip"
                android:textStyle="bold"
                />

            <!--<TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="right"
                android:text="현장"
                android:textColor="#d7d7d7"
                />-->

            <TextView
                android:id="@+id/item9"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/delivery_pda_deposit"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/item10"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/delivery_address1"
                android:paddingLeft="10dip"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/item11"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/delivery_pda_deposit"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:orientation="horizontal"
            android:paddingHorizontal="50dp"
            android:paddingBottom="5dp"
            >

            <Button
                android:id="@+id/button_detail"
                style="@style/Button_Style_Gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="전표 상세보기"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>